syntax = "proto3";
package capture.message;

message CaptureMessage{
    bytes CropImage = 1;
    bytes FaceImage = 2;
    int64 TimeStamp = 3;
    int64 Track = 4;
    string Type = 5;
    int64 SequenceNumber = 6;
}